# mipt-search

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run-clang-format.py
cmake/: BuildFlags.cmake  TestSolution.cmake
docs/: intro.md  papers.md
lib/: CMakeLists.txt
lib/client/: CMakeLists.txt  Makefile  cmake_install.cmake  cmdparser.cpp  cmdparser.h  search_cli.cpp  test.cpp  variadic_table.h
lib/common/: CMakeLists.txt  compression.h  config.h  test.cpp  types.h
lib/indexer/: indexer.cpp
lib/server/: CMakeLists.txt  main.cpp
lib/server/engine/: CMakeLists.txt  ranking.cpp  ranking.h
lib/server/index/: CMakeLists.txt  disk.cpp  disk.h  index.h  index_ut.cpp  ram.cpp  ram.h  rt.cpp  rt.h  storage.cpp  storage.h
lib/server/morphology/: CMakeLists.txt  filter.h  lower.cpp  lower.h  mappings.cpp  mappings.h  morph.cpp  morph.h  stemming.cpp  stemming.h  stemming_impl.h  stopwords.cpp  stopwords.h  test.cpp
lib/server/net/: CMakeLists.txt  Makefile  cmake_install.cmake  context.cpp  context.h  handlers.cpp  handlers.h  searchdnetloop.cpp  searchdnetloop.h
lib/server/sql/: ast.cpp  ast.h  driver.cpp  driver.hh  eval.cpp  location.hh  parser.y  scanner.h  scanner.l  test.cpp
lib/server/storage/: row.cpp  row.h  schema.cpp  schema.h
lib/std/: cache.cpp  cache.h  csv_parser.h  logger.h  string.h
tasks/: 00-hello-http.md  01-send-http.md  02-ram-indexer.md
test/: test.py  test.sh
test/wrapper/: __init__.py  error.py  test_template.py  wrapper.py
